--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -4,7 +4,7 @@
   {{ if isset .Params "author" }}<p class="post-author right">{{ i18n "written" }} {{ .Params.author }}</p>{{ end }}
   <div class="clearfix"></div>
   <h3 class="h2 post-title">{{ .Title }} {{ if .Draft }}(draft){{end}}</h3>
-  <p class="post-summary">{{ .Summary }}</p>
+  <p class="post-summary italic">{{ .Summary }}</p>
   </a>
   {{ $baseurl := .Site.BaseURL }}
   {{ if isset .Params "tags" }} {{ if len .Params.tags }}
