--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,5 +27,7 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/combined-min.css">
   {{ if isset .Site.Params "search_engine" }}<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/tipuesearch/tipuesearch.css">{{ end }}
 
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/650626aaa9e41a4158dda280d/003e2d20e885bcb75c4d410a9.js");</script>
+
 </head>
 <body class="">
